# Syntra-MVP

./: .gitignore  .replit  TDD.md  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  legal-clause-segmentation.md  market-lens-v2-adapter.md  python-artifact-registration.md  python-deps-and-deploy.md  python-package-install.md  syntra-dashboard-risk-sort.md  syntra-market-lens.md  syntra-playbook-lookup.md  syntra-rule-reconciliation.md  syntra-sqlite-audit-lock.md
artifacts/syntra/: app.py  audit.py  database.py  llm.py  models.py  seed.json  syntra.db
artifacts/syntra-app/: index.html  package.json
artifacts/syntra-app/.replit-artifact/: artifact.toml
artifacts/syntra/.replit-artifact/: artifact.edit.toml
artifacts/syntra/knowledge/: index.py  lane_two.py
artifacts/syntra/market_data/: DATA_ATTRIBUTION.md  market.parquet  market.sqlite  omx_reference.json
artifacts/syntra/market_lens/: __init__.py  batch.py  build_table.py  evidence.py  extract.py  schema_loader.py  score.py  stats.py  (+1 more)
attached_assets/: Pasted--Contract-Review-View-Redesign-Spec-for-Replit-Agent-Go_1783632565257.txt  Pasted--Syntra-Builder-Challenge-Build-Specification-v0-1-Work_1783394416723.txt  Pasted-I-ll-take-a-look-at-that-repository-to-check-for-expose_1783532541308.txt  Pasted-Solid-bones-clean-layout-sensible-nav-the-right-objects_1783487010311.txt  Pasted-The-Challenge-Syntra-General-Counsel-for-SMBs-SMBs-and-_1783394565760.txt  Pasted-You-re-both-right-and-the-tension-resolves-once-you-see_1783634466073.txt  REPLIT_INSTRUCTIONS_1783575293712.md
(+49 files in other folders)
