[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
# NOTE: runtime deps intentionally NOT declared here — the publish pipeline runs
# `uv sync`, which cannot install into this workspace's .pythonlibs (not a venv)
# and fails the build. Packages live pre-installed in .pythonlibs.
# Runtime imports: flask, openai, pydantic, python-docx, pdfplumber, agentic-doc,
# langchain-text-splitters, rank-bm25, pyyaml.
dependencies = []
